src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-nunito);
  /* Custom Colors */
  --color-accent: #0D57B6;
  --color-primary: #1651A9;
  --color-bgGradient: #B3DFFE;
  --color-dark: #222222;
  --color-light-yellow: #F9F8DA;
  --color-light-red: #FFF3F3;
  --color-light-blue: #E8FBFF;
  /* --color-blue-dark: #064BAD; */
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-nunito), sans-serif;
}

